force-app/main/default/objects/Equipment_Request__c/Equipment_Request__c.object-meta.xml
<CustomObject>
<description>Equipment Request custom object for tracking equipment requests</description>
    <label>Equipment Request</label>
    <nameField>
        <label>Equipment Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Equipment Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>