force-app/main/default/objects/Equipment_Request__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <label>Employee</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Equipment Requests</relationshipLabel>
    <relationshipName>Equipment_Requests</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>