force-app/main/default/objects/Equipment_Request__c/fields/Laptop_Required__c.field-meta.xml
<CustomField>
    <fullName>Laptop_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether a laptop is required for this equipment request</description>
    <label>Laptop Required</label>
    <type>Checkbox</type>
</CustomField>