force-app/main/default/objects/Equipment_Request__c/fields/Monitor_Required__c.field-meta.xml
<CustomField>
    <fullName>Monitor_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether a monitor is required for this equipment request</description>
    <label>Monitor Required</label>
    <type>Checkbox</type>
</CustomField>