force-app/main/default/objects/Equipment_Request__c/fields/Phone_Required__c.field-meta.xml
<CustomField>
    <fullName>Phone_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether a mobile phone is required for this equipment request</description>
    <label>Mobile Phone Required</label>
    <type>Checkbox</type>
</CustomField>